--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -88,9 +88,9 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="js/socket.io.js"></script>
-    <script src="js/sails.io.js"></script>
-    <script src="js/example.js"></script>
+    <script src="/js/socket.io.js"></script>
+    <script src="/js/sails.io.js"></script>
+    <script src="/js/example.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
