--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,7 +12,9 @@ setTimeout(function sunrise () {
 
 <div class="default-page">
     <div class="header">
-        <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
+        <h1 id="main-title" class="container"><%= __('primo.js') %></h1>
+        <h5 class="container">Project Priorities and Reporting, using a full-stack JavaScript design</h5>
+        <br>
         <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
     </div>
     <div class="main container clearfix">
