--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<form action="/login" method="post">
+<form action="/process" method="post">
     <div><input type="text" name="userName"></div>
     <div><input type="password" name="password"></div>
     <div><input type="submit"></div>
